[gd_scene load_steps=15 format=2]

[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://NPCS/Npc.gd" type="Script" id=3]
[ext_resource path="res://HitHurtBoxes/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://HitHurtBoxes/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=9]
[ext_resource path="res://WhiteColor.shader" type="Shader" id=10]
[ext_resource path="res://ai/FollowingObject.tscn" type="PackedScene" id=11]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 10 )
shader_param/active = false

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=15]

[sub_resource type="CircleShape2D" id=16]
radius = 11.0

[sub_resource type="Animation" id=8]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=9]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=10]
radius = 23.0

[node name="NPC" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
frames = SubResource( 17 )
animation = "idle"
playing = true
offset = Vector2( 0, -12 )

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 15 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, -14 )
shape = SubResource( 16 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 8 )
anims/Stop = SubResource( 9 )

[node name="FollowingObject" parent="." instance=ExtResource( 11 )]

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 10 )

[node name="StateString" type="RichTextLabel" parent="."]
margin_right = 40.0
margin_bottom = 40.0
text = "Some Text"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="finished_path" from="FollowingObject" to="." method="_on_FollowingObject_finished_path"]

[editable path="SoftCollision"]

[editable path="HurtBox"]
